--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ section {
     border: 2px solid grey;
     border-radius: 8px;
     transition-duration: 0.4s;
+    cursor: pointer;
+    margin: 2px;
 }
 
 #button:hover {
